--- a/pom.xml
+++ b/pom.xml
@@ -6,27 +6,11 @@
     <version>1.0-SNAPSHOT</version>
     <inceptionYear>2008</inceptionYear>
     <properties>
-        <scala.version>2.11.6</scala.version>
-        <scala.short.version>2.11</scala.short.version>
-        <spark.version>2.3.1</spark.version>
+        <scala.version>2.12.10</scala.version>
+        <scala.short.version>2.12</scala.short.version>
+        <spark.version>2.4.4</spark.version>
         <scoverage.plugin.version>1.3.0</scoverage.plugin.version>
     </properties>
-
-    <repositories>
-        <repository>
-            <id>scala-tools.org</id>
-            <name>Scala-Tools Maven2 Repository</name>
-            <url>http://scala-tools.org/repo-releases</url>
-        </repository>
-    </repositories>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>scala-tools.org</id>
-            <name>Scala-Tools Maven2 Repository</name>
-            <url>http://scala-tools.org/repo-releases</url>
-        </pluginRepository>
-    </pluginRepositories>
 
     <dependencies>
         <dependency>
@@ -61,7 +45,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-streaming-kafka-0-8_${scala.short.version}</artifactId>
+            <artifactId>spark-streaming-kafka-0-10_${scala.short.version}</artifactId>
             <version>${spark.version}</version>
         </dependency>
         <dependency>
@@ -105,12 +89,13 @@
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
-            <version>LATEST</version>
+            <version>2.3.0</version>
         </dependency>
         <dependency>
             <groupId>org.elasticsearch</groupId>
-            <artifactId>elasticsearch-spark-20_${scala.short.version}</artifactId>
-            <version>6.4.1</version>
+            <!--artifactId>elasticsearch-spark-20_${scala.short.version}</artifactId -->
+            <artifactId>elasticsearch-spark-20_2.11</artifactId>
+            <version>7.4.2</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/io.spray/spray-json -->
         <dependency>
@@ -129,6 +114,16 @@
             <artifactId>kafka-streams-test-utils</artifactId>
             <version>2.0.0</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-streams</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-streams-scala_2.12</artifactId>
+            <version>2.3.0</version>
         </dependency>
     </dependencies>
 
