--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.alan.developer.bigdata</groupId>
-    <artifactId>logging-streaming-kafka</artifactId>
+    <artifactId>presentacion-bigdata</artifactId>
     <version>1.0-SNAPSHOT</version>
     <inceptionYear>2008</inceptionYear>
     <properties>
-        <scala.version>2.12.10</scala.version>
+        <scala.version>2.12.8</scala.version>
         <scala.short.version>2.12</scala.short.version>
         <spark.version>2.4.4</spark.version>
         <scoverage.plugin.version>1.3.0</scoverage.plugin.version>
@@ -17,7 +17,7 @@
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
             <version>${scala.version}</version>
-            <scope>provided</scope>
+            <!--scope>provided</scope-->
         </dependency>
         <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
         <dependency>
@@ -41,7 +41,7 @@
                     <artifactId>commons-codec</artifactId>
                 </exclusion>
             </exclusions>
-            <scope>provided</scope>
+            <!--scope>provided</scope-->
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
@@ -58,7 +58,7 @@
                     <artifactId>commons-codec</artifactId>
                 </exclusion>
             </exclusions>
-            <scope>provided</scope>
+            <!--scope>provided</scope-->
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-sql -->
         <dependency>
@@ -71,7 +71,7 @@
                     <artifactId>commons-codec</artifactId>
                 </exclusion>
             </exclusions>
-            <scope>provided</scope>
+            <!--scope>provided</scope-->
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.101tec/zkclient -->
         <dependency>
@@ -122,7 +122,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka-streams-scala_2.12</artifactId>
+            <artifactId>kafka-streams-scala_${scala.short.version}</artifactId>
             <version>2.3.0</version>
         </dependency>
     </dependencies>
