--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,8 @@
     <version>1.0-SNAPSHOT</version>
     <inceptionYear>2008</inceptionYear>
     <properties>
-        <scala.version>2.12.8</scala.version>
-        <scala.short.version>2.12</scala.short.version>
+        <scala.version>2.11.12</scala.version>
+        <scala.short.version>2.11</scala.short.version>
         <spark.version>2.4.4</spark.version>
         <scoverage.plugin.version>1.3.0</scoverage.plugin.version>
     </properties>
@@ -17,10 +17,9 @@
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
             <version>${scala.version}</version>
-            <!--scope>provided</scope-->
+            <scope>provided</scope>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
-        <dependency>
+        <!--dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.2.3</version>
@@ -29,7 +28,7 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-access</artifactId>
             <version>1.2.3</version>
-        </dependency>
+        </dependency-->
 
         <dependency>
             <groupId>org.apache.spark</groupId>
@@ -41,7 +40,7 @@
                     <artifactId>commons-codec</artifactId>
                 </exclusion>
             </exclusions>
-            <!--scope>provided</scope-->
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
@@ -52,13 +51,13 @@
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_${scala.short.version}</artifactId>
             <version>${spark.version}</version>
-            <exclusions>
+            <!--exclusions>
                 <exclusion>
                     <groupId>commons-codec</groupId>
                     <artifactId>commons-codec</artifactId>
                 </exclusion>
-            </exclusions>
-            <!--scope>provided</scope-->
+            </exclusions-->
+            <scope>provided</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-sql -->
         <dependency>
@@ -71,7 +70,7 @@
                     <artifactId>commons-codec</artifactId>
                 </exclusion>
             </exclusions>
-            <!--scope>provided</scope-->
+            <scope>provided</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.101tec/zkclient -->
         <dependency>
